--- a/ScheduleMeeting/appsettings.json
+++ b/ScheduleMeeting/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ScheduleContext": "Data Source=SHAKIR;Database=ScheduleMeeting;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ScheduleContext": "Data Source=DESKTOP-186ATJH\\SHAKIR;Database=ScheduleMeeting;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
